--- a/src/site/index.html
+++ b/src/site/index.html
@@ -79,7 +79,7 @@
     window.bridge.updateMessage(updateMessage)
   })
   const updateMessage = (event, message) => {
-    console.log("message logged in view", message)
+    console.log(message)
   };
 </script>
 
