--- a/src/site/index.html
+++ b/src/site/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="m-4 flex flex-col">
+  Test
   <div class="flex justify-center items-center h-20 flex-row">
     <h1 class="text-white text-3xl font-medium select-none">Pegasus VoiceChat</h1>
   </div>
