--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
 <body class="m-4 flex flex-col">
 
   <input id="robloxId" type="number" hidden></input>
-  <input id="pushToTalk" type="checkbox"></input>
+  <input id="pushToTalk" type="checkbox" hidden></input>
   <input id="pushToTalkRawCode" type="number" value="86" hidden></input>
   <div class="flex justify-center items-center h-20 flex-row">
     <h1 class="text-white text-3xl font-medium select-none">Pegasus VoiceChat</h1>
